# picoforge

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  package.nix  picoforge.spec  rustfmt.toml  shell.nix  svelte.config.js  vite.config.js
.cargo/: config.toml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: nix-binary-cache.yml  nix-check-package.yml  nix-update-package.yml  release.yml
docs/: Building.md  Installation.md
src/: logging.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  io.rs  lib.rs
src-tauri/src/fido/: hid.rs  mod.rs
src-tauri/src/rescue/: mod.rs
src/device/: error.rs  io.rs  mod.rs  types.rs
src/device/fido/: constants.rs  hid.rs  mod.rs
src/device/rescue/: constants.rs  mod.rs
src/lib/components/device/: NoDeviceStatus.svelte
src/lib/device/: constants.svelte.ts  manager.svelte.ts
src/lib/layout/: sidebar.svelte
src/lib/views/: aboutView.svelte  configView.svelte  homeView.svelte  passkeysView.svelte
src/ui/: assets.rs  colors.rs  mod.rs  rootview.rs  ui_types.rs
src/ui/components/: button.rs  card.rs  dialog.rs  mod.rs  page_view.rs  sidebar.rs
src/ui/views/: about.rs  config.rs  home.rs  logs.rs  mod.rs  passkeys.rs  security.rs
themes/: picoforge-zinc.json
