[package]
name = "picoforge"
version = "0.4.0"
description = "An open source commissioning tool for Pico FIDO security keys. Developed with Rust, Tauri, and Svelte."
authors = ["Suyog Tandel", "PicoForge Contributers"]
license = "AGPL-3.0"
edition = "2024"

[dependencies]
# tokio = { version = "1.49", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"            # Logging facade
log4rs = "1"           # For logging to output (like stdout)
directories = "6"      # For Applcation config/data dir handling

# For device management backend:
pcsc = "2"             # Standard Smart Card API (connect to the key)
hex = "0.4"            # For parsing "CAFE:4242" VID/PID strings
byteorder = "1.5"      # Required for writing Big-Endian numbers (firmware requirement)
thiserror = "2"        # Makes custom error handling much easier
anyhow = "1"           # For easy error propagation
ctap-hid-fido2 = "3.5" # For fido2 interface operations
hidapi = "2.6"         # For fido2 interface operations but non-standard commands
serde_cbor_2 = "0.13"
rand = "0.10"
bitflags = "2.11"
ring = "0.17"          # For signing fido2 messages with pin token

# For Application UI:
gpui = { version = "0.2.2", features = [] }
gpui-component = "0.5.1"
rust-embed = "8.11.0"

[profile.dev]
incremental = true  # Compile your binary in smaller steps.
codegen-units = 256
opt-level = 1       # Prioritizes speed. Use `z` if you prefer small binary size.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations however is not stable.
opt-level = 3     # Prioritizes speed. Use `z` if you prefer small binary size.
# panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
