[package]
name = "picoforge"
version = "0.3.1"
description = "An open source commissioning tool for Pico FIDO security keys. Developed with Rust, Tauri, and Svelte."
authors = ["Suyog Tandel", "PicoForge Contributers"]
license = "AGPL-3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "picoforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

pcsc = "2"             # Standard Smart Card API (connect to the key)
hex = "0.4"            # For parsing "CAFE:4242" VID/PID strings
byteorder = "1.5"      # Required for writing Big-Endian numbers (firmware requirement)
thiserror = "2"        # Makes custom error handling much easier
anyhow = "1"           # For easy error propagation
ctap-hid-fido2 = "3.5" # For fido2 interface operations
hidapi = "2.6"         # For fido2 interface operations but non-standard commands
serde_cbor_2 = "0.13"
rand = "0.9"
bitflags = "2.10"
ring = "0.17"          # For signing fido2 messages with pin token

log = "0.4"            # Logging facade
log4rs = "1"           # For logging to output (like stdout)
# dirs = "6"
directories = "6"      # For Applcation config/data dir handling

[profile.dev]
incremental = true     # Compile your binary in smaller steps.
codegen-units = 256

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations however is not stable.
opt-level = 3     # Prioritizes speed. Use `z` if you prefer small binary size.
# panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
